RESOLVED FIXED Bug 40268
HTML5 Parser hits ASSERT in fast/events/stop-load-in-unload-handler-using-document-write.html
https://bugs.webkit.org/show_bug.cgi?id=40268
Summary HTML5 Parser hits ASSERT in fast/events/stop-load-in-unload-handler-using-doc...
Tony Gentilcore
Reported 2010-06-07 14:48:42 PDT
fast/events/stop-load-in-unload-handler-using-document-write.html ASSERTION FAILED: !m_closed (/Projects/WebKit/WebCore/platform/text/SegmentedString.cpp:126 void WebCore::SegmentedString::append(const WebCore::SegmentedString&))
Attachments
Patch (10.14 KB, patch)
2010-06-07 16:43 PDT, Eric Seidel (no email)
abarth: review+
Tony Gentilcore
Comment 1 2010-06-07 15:32:38 PDT
You mentioned you already started this.
Eric Seidel (no email)
Comment 2 2010-06-07 16:43:11 PDT
Adam Barth
Comment 3 2010-06-07 16:54:18 PDT
Comment on attachment 58094 [details] Patch For realz? OM double-G. This should be two patches, but it's ok.
Eric Seidel (no email)
Comment 4 2010-06-07 17:57:48 PDT
Note You need to log in before you can comment on or make changes to this bug.