WebCore/loader/FrameLoader.cpp
@@ -2869,11 +2869,6 @@ String FrameLoader::userAgent(const KURL& url) const
     return m_client->userAgent(url);
 }
 
-void FrameLoader::tokenizerProcessedData()
-{
-    checkCompleted();
-}
-
 void FrameLoader::handledOnloadEvents()
 {
     m_client->dispatchDidHandleOnloadEvents();
