WebCore/loader/SinkDocument.cpp
@@ -36,7 +36,6 @@ public:
         
 private:
     virtual void write(const SegmentedString&, bool) { ASSERT_NOT_REACHED(); }
-    virtual void stopParsing();
     virtual void finish();
     virtual bool isWaitingForScripts() const { return false; }
         
@@ -45,11 +44,6 @@ private:
 
     Document* m_document;
 };
-
-void SinkTokenizer::stopParsing()
-{
-    Tokenizer::stopParsing();
-}
 
 void SinkTokenizer::finish()
 {
